--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
-  <string name="app_name">Material Hacker News</string>
+  <string name="app_name">Hacker News</string>
   <string name="action_settings">Settings</string>
   <string name="loading_stories">Loading stories…</string>
 
   <string name="top_stories">Top Stories</string>
   <string name="new_stories">New</string>
   <string name="best">Best</string>
-  <string name="bork_bork">BORK BORK</string>
 </resources>
